# robocon2018_camera

./: CMakeLists.txt  Fujibayashi_PlayerLog.md  README02.md  memo  pcl.hpp  pcl.launch  pin_hoge.hpp  util_hoge.h  util_hoge.hpp  video.hpp  viewer_hoge.cpp  viewer_hoge02.cpp
include/: least_squares_method.hpp  orbit.hpp  pcl.hpp  pcl_util.hpp  pin.hpp  serial.hpp  util.hpp  video.hpp
pcd/: 0000_cloud.pcd  2018_coat.ply  2018_coat.stl  2018_coat_03.pcd  coat01.pcd  test01.pcd  test02.pcd  test03.pcd  test04.pcd
pcd/2018.2.26_11:9:8/: 0000_cloud.pcd  0008_cloud.pcd  0011_cloud.pcd  0013_cloud.pcd  0017_cloud.pcd  0020_cloud.pcd  0025_cloud.pcd  0029_cloud.pcd  0033_cloud.pcd  0037_cloud.pcd  0038_cloud.pcd  0043_cloud.pcd  0047_cloud.pcd  0051_cloud.pcd  0056_cloud.pcd  0058_cloud.pcd  0061_cloud.pcd  0063_cloud.pcd  0069_cloud.pcd  0070_cloud.pcd  0076_cloud.pcd  0077_cloud.pcd  0081_cloud.pcd  0083_cloud.pcd  0090_cloud.pcd  0093_cloud.pcd  0096_cloud.pcd  0100_cloud.pcd  0106_cloud.pcd  0107_cloud.pcd  0113_cloud.pcd  0116_cloud.pcd  0118_cloud.pcd  0123_cloud.pcd  0126_cloud.pcd  0132_cloud.pcd  0137_cloud.pcd  0140_cloud.pcd  0144_cloud.pcd  timeStamp.txt
src/: memo  viewer.cpp
